--- a/css/stylem.css
+++ b/css/stylem.css
@@ -14,7 +14,7 @@ body {
 header {
     text-align: center;
     padding: 10px;
-    color: black;
+    color: white;
 }
 
 header h1 {
@@ -89,7 +89,7 @@ nav ul li a:hover {
 .image-container {
     position: relative; 
     width: 100%;
-    max-width: 2700px; 
+    max-width: 2500px; 
     margin: 0 auto;
 }
 
